Require Java 1.7 for daemon build and runtime.
git-svn-id: svn://svn.code.sf.net/p/lockss/svn/lockss-daemon/trunk@38916 4f837ed2-42f5-46e7-a7a5-fa17313484d4

--- a/README
+++ b/README
@@ -14,7 +14,7 @@ Prerequisites
 
 Installed Packages:
 
-- Sun JDK 6 or 7.  Java 8 is not yet supported.
+- Sun JDK 7.  Java 8 is not yet supported.
 
 - Ant 1.7.1 or greater.  (http://ant.apache.org/)
 
